--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "axios": "^0.26.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.2"
+    "react-router-dom": "^6.2.2",
+    "swiper": "^8.0.7"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
