--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
-  "name": "mulpj",
+  "name": "mulpjfront",
   "version": "1.0.0",
+  "main": "index.js",
+  "license": "MIT",
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
