--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "engines": {
+    "node": "^17.0.2"
+  },
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
