--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.26.1",
+    "jsonwebtoken": "^8.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
@@ -16,6 +17,7 @@
     "swiper": "^8.0.7"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^8.5.8",
     "@vitejs/plugin-react": "^1.0.7",
     "vite": "^2.8.0"
   }
